packages/next-swc/crates/styled_jsx/tests/errors/wrong-child-type/output.js
import _JSXStyle from "next/dist/shared/lib/styled-jsx";
export default (()=><div >

    <style jsx>

      10

    </style>

  </div>
);
